--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.5",
     "morgan": "^1.8.1",
-    "nunjucks": "^3.0.0"
+    "nunjucks": "^3.0.0",
+    "passport": "^0.3.2"
   }
 }
